# folder-icon-manager

./: .gitignore  CLAUDE.md  FolderIconManager.sln  FolderIconManager_Enhanced_PRD.docx  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
inbox/: stage1-acceptance-report.txt  stage1-analysis.txt  stage1-final-fix-report.txt  stage1-test-plan.txt  项目目录树.txt
scripts/: build.bat  dev.bat
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: desktop_ini.rs  explorer.rs  mod.rs
src/FolderIconManager/: App.xaml  App.xaml.cs  FolderIconManager.csproj  MainWindow.xaml  MainWindow.xaml.cs
src/FolderIconManager/Interop/: ShellInterop.cs
src/FolderIconManager/Models/: FavoriteFolderItem.cs  FavoriteIconItem.cs  OperationResult.cs
src/FolderIconManager/Services/: DesktopIniEditor.cs  FavoriteStore.cs  FolderIconService.cs  FolderPathValidator.cs  IDesktopIniEditor.cs  IFolderIconService.cs  IShellNotifier.cs  ShellNotifier.cs
src/FolderIconManager/ViewModels/: MainWindowViewModel.cs  ObservableObject.cs  RelayCommand.cs
src/components/: ActionButtons.tsx  FolderSelector.tsx  IconSelector.tsx  StatusBar.tsx
tests/FolderIconManager.Tests/: DesktopIniEditorTests.cs  FolderIconManager.Tests.csproj  FolderIconServiceTests.cs  FolderPathValidatorTests.cs  MainWindowViewModelTests.cs  TestWorkspace.cs
