[package]
name = "folder-icon-manager"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
tauri = { version = "2.4", features = [] }
tauri-plugin-dialog = "2.4"
encoding_rs = "0.8"
windows-sys = { version = "0.59", features = [
  "Win32_UI_Shell",
  "Win32_Storage_FileSystem",
  "Win32_Foundation",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
